[package]
name = "blossom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = "4.4.6"
colored = "2.0.4"
dirs = "5.0.1"
reqwest = "0.11.22"
semver = "1.0.19"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
bytes = "1.5.0"
flate2 = "1.0.27"
tar = "0.4.40"
junction = "1.0.0"
async-recursion = "1.0.5"
symlink = "0.1.0"
